--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.16.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.0.2",
     "nanoid": "^5.1.6",
